<resources>
    <string name="app_name">Magic Tiles </string>
    <string name="piano_tiles">Magic Tiles</string>
    <string name="bouton_new">Nouvelle Partie</string>
    <string name="bouton_map">Localisation</string>
    <string name="bouton_reprendre">Reprendre</string>
    <string name="bouton_rejouer">Rejouer</string>
    <string name="bouton_enregistrer">Enregistrer</string>
    <string name="bouton_menu">Menu</string>
    <string name="bouton_score">Scores</string>
    <string name="bouton_valider">Valider</string>
    <string name="bouton_annuler">Annuler</string>
    <string name="mode">Changer de mode</string>
    <string name="score">Score : </string>
    <string name="gagne">Gagné !</string>
    <string name="perdu">Perdu !</string>
    <string name="meilleur">Meilleur score : </string>
    <string name="textview_enregistrer">Enregistrer</string>
    <string name="nom">Nom : </string>
    <string name="date">Date : </string>
    <string name="retour_menu">Retour au menu principal</string>
    <string name="supprimer">Supprimer</string>
    <string name="bouton_photo">Photo</string>
    <string name="initial_content">contenu initial</string>
    <string name="permission_denied">Permission refusée</string>
    <string name="security_error">Erreur de sécurité</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyB5Yo-uQ_8_S0fijRxbHN3WIyicREu6_og</string>
    <string name="x_eq">x =</string>
    <string name="y_eq">y =</string>
    <string name="z_eq">z =</string>


    <string name="action_settings">Settings</string>
    <string name="start_button">Démarrer</string>
    <string name="stop_button">Stop</string>

    <string name="unsupported">Capteur absent</string>
    <string name="sensor">Capteur</string>
    <string name="rate">Taux</string>

    <string-array name="sensors">
        <item>Acceléromètre</item>
        <item>Gyroscope</item>
        <item>Magnétomètre</item>
    </string-array>

    <string-array name="frequencies">
        <item>NORMAL</item>
        <item>UI</item>
        <item>GAME</item>
        <item>FASTEST</item>
    </string-array>

</resources>
